# korean-text-utils

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md
examples/: usage.py
src/korean_text_utils/: __init__.py  hangul.py  normalize.py  romanize.py  utils.py
tests/: test_hangul.py  test_normalize.py  test_romanize.py  test_utils.py
