[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-text-utils"
version = "0.1.0"
description = "Useful utilities for processing Korean text."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "mebaser" }
]
keywords = ["korean", "hangul", "romanization", "text", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/mebaser/korean-text-utils"
Repository = "https://github.com/mebaser/korean-text-utils"
Issues = "https://github.com/mebaser/korean-text-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
